[project]
name = "gifariphantom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "safetensors>=0.5.3",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.64.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]
